--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a small polarbeardog from the universe Korra the Lengend.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from my mom polarbear and father dog </p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love to eat pigeons</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Professional swimming turtle</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Snow melt off of 104th and simms</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I can't do that, I'm a polarbeardog</p>
     </section>
 
     <footer id="footer">
